openshift/prod/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prod-senac-from-scratch-multiagent-service
  namespace: prod-senac-orquestrator-chatbotx
  labels:
    app: prod-senac-from-scratch-multiagent
spec:
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: prod-senac-from-scratch-multiagent
