openshift/prod/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prod-senac-from-scratch-multiagent
  namespace: prod-senac-orquestrator-chatbotx
  labels:
    app: prod-senac-from-scratch-multiagent
  annotations:
    haproxy.router.openshift.io/timeout: 180s
    haproxy.router.openshift.io/rewrite-target: /
spec:
  host: prod-senac-orquestrator-chatbotx.ocp-senac-11f45abbd458185944dd806416f75c34-0000.us-south.containers.appdomain.cloud
  path: /from-scratch-multiagent
  to:
    kind: Service
    name: prod-senac-from-scratch-multiagent-service
    weight: 100
  port:
    targetPort: 8000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
